--- a/src/api/package.json
+++ b/src/api/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
     "simple-crypto-js": "^2.2.0"
   }
