--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "simple-crypto-js": "^2.2.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-	"@angular/cli": "~8.3.23",
+	"@angular/cli": "~8.3.23"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",   
