--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-	"postinstall": "ng build --aot -prod"
+    "postinstall": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -25,10 +25,10 @@
     "simple-crypto-js": "^2.2.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-	"@angular/cli": "~8.3.23"
+    "@angular/cli": "~8.3.23"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.23",   
+    "@angular-devkit/build-angular": "~0.803.23",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/node": "~8.9.4",
